--- a/meta-custom/meta-bachelor/recipes-userspace/website/files/style.css
+++ b/meta-custom/meta-bachelor/recipes-userspace/website/files/style.css
@@ -1,48 +1,43 @@
 h1 {
-    font-size: 2.5rem;
-    margin-bottom: 2rem;
-}
-
-p {
-    font-size: 1.8rem;
+    margin-bottom: 1rem;
 }
 
 .hidden {
     display: none;
 }
 
-.modal {
+.my-modal {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 70%;
-
+    width: 100%;
+    color: black;
     background-color: white;
     padding: 6rem;
     border-radius: 5px;
     box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
-    z-index: 10;
+    z-index: 12312;
 }
 
-.close-modal {
+.my-close-modal {
     position: absolute;
     top: 1.2rem;
     right: 2rem;
-    font-size: 5rem;
+    font-size: 3rem;
     color: #333;
     cursor: pointer;
     border: none;
     background: none;
 }
 
-.overlay {
+.my-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
-    backdrop-filter: blur(3px);
+    /* backdrop-filter: blur(3px); */
     z-index: 5;
 }
